plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '8.1.0'
    id 'com.github.spotbugs' version '6.4.8'
    id 'net.ltgt.errorprone' version '4.4.0'
}

group = 'com.trinity'
version = '0.0.1-SNAPSHOT'
description = 'hermes'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//    prometheues registry
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

//    OpenAPI + Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
//  Logback + Loki for logging
//    implementation 'com.github.loki4j:loki-logback-appender:1.5.2'
//    lombok
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    implementation 'org.postgresql:postgresql:42.7.8'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }

    // TestContainers for integration tests
    testImplementation 'org.testcontainers:testcontainers:1.20.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    testImplementation 'org.testcontainers:postgresql:1.20.4'

    // Spring Security + OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // Keycloak Admin Client
    implementation 'org.keycloak:keycloak-admin-client:22.0.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // Required by Keycloak Admin Client
    implementation 'org.jboss.resteasy:resteasy-client:6.2.4.Final'
    implementation 'org.jboss.resteasy:resteasy-jackson2-provider:6.2.4.Final'


    //    Open Telemetry/ Jaeger
    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'

//    SES Integration
    implementation platform('software.amazon.awssdk:bom:2.25.10')
    implementation 'software.amazon.awssdk:ses'
    implementation 'software.amazon.awssdk:sesv2'
//    Build QR Codes
    implementation 'com.google.zxing:core:3.5.1'
    implementation 'com.google.zxing:javase:3.5.1'
//    Java Mail
    implementation 'org.eclipse.angus:angus-mail:2.0.2'
    implementation 'org.eclipse.angus:angus-activation:2.0.1'

    errorprone('com.google.errorprone:error_prone_core:2.42.0')

    spotbugsPlugins('com.h3xstream.findsecbugs:findsecbugs-plugin:1.14.0')
    compileOnly("com.github.spotbugs:spotbugs-annotations:4.8.6")
}

tasks.named('test') {
    useJUnitPlatform()
}


springBoot {
    mainClass = 'com.trinity.hermes.HermesApplication'
}

test {
    enabled = true
}

spotless {
    java {
        target('src/**/*.java')
        googleJavaFormat('1.28.0')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

spotbugs {
    toolVersion = '4.8.6'
    ignoreFailures = false
    effort = 'max'
    reportLevel = 'default'
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Werror"
}

tasks.withType(JavaCompile).configureEach {
    options.errorprone {
        check("StringConcatToTextBlock", net.ltgt.gradle.errorprone.CheckSeverity.OFF)
    }
}
